--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,8 +1,2 @@
-/TileTests.class
-/Game$1.class
-/GameTest.class
-/TTT_Bot.class
-/Player.class
-/View.class
-/Game.class
-/Tile.class
+/GameFiles/
+/TestFiles/
